[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "getnonce"
version = "0.1.0"
description = "Get an apnonce/generator pair from any iDevice (including A12+) without jailbreak"
authors = ["nyuszika7h <nyuszika7h@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
rich = "^12.5.1"
