[project]
name = "getnonce"
version = "0.1.0"
description = "Get an apnonce/generator pair from any iDevice (including A12+) without jailbreak"
authors = [
  { name = "nyuszika7h", email = "nyuszika7h@gmail.com" },
]
license = { text = "MIT" }
requires-python = "~= 3.8"
dependencies = [
  "rich ~= 12.5",
]
[project.optional-dependencies]
dev = [
  "Flake8-pyproject ~= 1.1",
]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.flake8]
max-line-length = 120
